--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,9 +9,31 @@
 
 body{
     background-color: #293133;
+    font-family: 'Bebas Neue', cursive;
 }
 
 img{
     width: 100%;
     display: block;
 }
+
+/* width */
+::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
